[project]
name = "image-generation-mcp"
version = "0.1.0"
description = "MCP stdio server boilerplate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "You" },
]
keywords = ["mcp", "model-context-protocol", "stdio"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
image-generation-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
